fix(DATA-2041) : set subscriptionRef from subscription instead of default value in outbound siri